fixed button vertical spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
 
 #content {
 	position: relative;
-	height: 60%;
+	height: 90%;
 	width: 90%;
 	padding: 10px;
 	padding-top: 1em;
@@ -62,10 +62,9 @@ Desktop scrollbar
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	height: 20px;
 	background-color: #2d2d2d;
 	margin-top: 0px;
-	padding-top: 15px;
+	padding-top: 10px;
 	padding-bottom: 10px;
 	overflow-y: scroll; 
 }
